--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "usemin": "usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html && usemin index.html -d dist --htmlmin -o dist/index.html",
     "build": "npm run clean && npm run copyfonts && npm run imagemin && npm run usemin"
   },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.9.0"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
